--- a/.gitignore
+++ b/.gitignore
@@ -1,76 +1,15 @@
+# Ignore sensitive files
+.env
+refresh_token.txt
 
-# Byte-compiled / optimized / DLL files
+# Bytecode and cache
 __pycache__/
 *.py[cod]
-*$py.class
-
-# C extensions
-*.so
-
-# Distribution / packaging
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-*.egg-info/
-.installed.cfg
-*.egg
 
 # Virtual environments
 venv/
 ENV/
-env/
-.venv/
+.env/
 
-# Flask stuff
-instance/
-.webassets-cache
-
-# PyInstaller
-*.manifest
-*.spec
-
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
-
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.nox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-*.py,cover
-.hypothesis/
-
-# Environments
-.env
-.env.*
-
-# IDEs and editors
-.vscode/
-.idea/
-*.sublime-project
-*.sublime-workspace
-
-# OS files
+# System files
 .DS_Store
-Thumbs.db
-
-# Logs
-*.log
-
-# Explicitly ignore your local token file
-refresh_token.env
